# accs-core

./: .pre-commit-config.yaml  AGENTS.md  README.md  pyproject.toml
accscore/: __init__.py  db.py  settings.py  storage.py
accscore/db/: __init__.py  events.py  jobs.py  tasks.py
accscore/schema/: __init__.py
docs/: Project 2.0.md  Projekt Részletes Leírása.md  accs_architecture_v_2.md  accscore_fejlesztoi_specifikacio_db_vezerelt_workflow.md  accscore_library_overview.md
tests/: test_db.py  test_defaults_isolation.py  test_events.py  test_jobs.py  test_schema.py  test_settings.py  test_storage.py  test_tasks.py
