[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "accscore"
version = "0.1.0"
description = "Core library for ACCS"
authors = [{name = "ACCS"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pydantic>=1.10,<2",
    "sqlalchemy>=1.4",
    "minio>=7.1.0",
]

[project.optional-dependencies]
test = ["pytest"]
