[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "accscore"
version = "0.1.0"
description = "Core library for ACCS"
authors = [{name = "ACCS"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pydantic>=2.7,<3",
    "pydantic-settings>=2.2",
    "sqlalchemy>=1.4",
    "minio>=7.1.0",
]

[project.optional-dependencies]
test = [
    "pytest",
    "testcontainers",
    "psycopg2-binary",
]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = ["E","F","B","UP","I","N","PTH","D","C90"]
ignore = ["D105","D107"]
mccabe.max-complexity = 10

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
